test/sematest/valid/unreachable_code_allowed.java
class A {
  public static void main(String[] args) {
    return;
    System.out.println(3);
  }

  public void blub(){
    while (true){

    }
    System.out.println(3);
  }

  public int bla(){
    if (4 == 4){
      return 3;
    } else {
      return 4;
    }
    return 5;
    return 6;
    System.out.println(7);
    return 8;
  }
}