test/sematest/invalid/no_overloading.java
class A {
  public static void main(String[] args) {

  }
  public int bla(int a){
    return 32;
  }

  public int bla(boolean a){
    return 3;
  }

}